fix alignment

--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,8 @@
 } 
 
 .pic {
-  max-height: 30vh;
-  max-width: 30vw;
+  max-height: 22vh;
+  max-width: 22vw;
   border-radius: 50%;
   padding: 10px;
 }
